# AnatomicAugmentedRealityProjector

./: CMakeLists.txt  CalibratiobData.cpp  CalibrationFile.yml  CalibrationFileExample.yml  CameraInput.cpp  CameraInput.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  ProjectorWidget.cpp  ProjectorWidget.hpp  README.md  io_util.cpp  io_util.hpp  mainwindow.ui
cmake/: FileConfiguration.h.in  FindFlyCapture.cmake
form/: MainWindow.ui
include/: CalibrationData.hpp  CameraInput.hpp  FileConfigurationExample.h  MainWindow.hpp  PointCloudInput.hpp  ProjectorWidget.hpp  io_util.hpp
src/: CalibrationData.cpp  CameraInput.cpp  Main.cpp  MainWindow.cpp  PointCloudInput.cpp  ProjectorWidget.cpp  io_util.cpp
